EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==01/05/2010==
WildcardX: Fixed the EQEmuLoginServer project file, fixed a crash caused by referencing a NULL object and made a couple improvements to error handling.

==12/30/2009==
Derision: Update azone2 with EQG v4 support.

==12/27/2009==
Derision: Fix to set required heading when zoning.

==12/23/2009==
cavedude: (Kilelen) Added quest functions quest::checktitle(int titleset), quest::enabletitle(int titleset), and quest::removetitle(int titleset) to allow Perl to enable or remove titles for a player.

Required SQL: utils/sql/svn/1057_titles.sql

==11/21/2009==
KLS: Ad hoc task selectors should ignore tasks that are not enabled now.

==11/19/2009==
Congdar: Fixed Resist Stat Caps, Removed GetMax...() methods calculating some AA's twice.

==11/18/2009==
KLS: Added check for character deletion as pointed out by Rogean.

==10/31/2009==
AndMetal: Changed HP regen calculations to be Live-like. Basically higher level regen will be about 50% more than it is currently & FD regen should be better than standing, but less than sitting (instead of 25% of sitting regen).
AndMetal: Races that get the HP Regen "bonus" (Iksar & Troll by default) can be customized as a bitmask via rule Character:BaseHPRegenBonusRaces(4352).
AndMetal: Added #setallskills alias for #setallskill/#setskillall.
AndMetal: Added '#rules get [rule]' for a single rule & '#rules values [catname]' for a category to allow real-time viewing of the rule values from the zone (not the DB).
AndMetal: Added client HP, Mana, & Endurance regen info to #showstats/#mystats

==10/30/2009==
KLS: Exported DoSpecialAttackDamage() to perl::mob;

==10/25/2009==
WildcardX: Tweaked guilds a little to accomodate integrating BOTS.
WildcardX: Bots can not join guilds in the same way as characters can. Bots can only be members, not officers.